--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^3.4.1"
+  },
+  "devDependencies": {
+    "@applitools/eyes-cypress": "^3.7.5"
   }
 }
